--- a/landing-page.css
+++ b/landing-page.css
@@ -18,7 +18,7 @@
    inline-size:100%; 
    block-size:100%; 
    z-index:-1; 
-   background-image:url('../../images/concept.jpg'); /* Updated image path for background */  
+   background-image:url('concept.jpg'); /* Updated image path for background */  
    background-repeat:no-repeat;  
    background-position:center;  
    opacity:.3;
